--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cpub
 description: A sample command-line application.
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/chengbook
 
 environment:
@@ -11,6 +11,9 @@ dependencies:
   args: ^1.6.0
   #执行shell命令
   process_run: ^0.11.0+2
+executables:
+  cpub: cpub
+
 dev_dependencies:
   pedantic: ^1.9.0
   test: ^1.14.4
