--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cpub
 description: A sample command-line application.
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/chengbook
 
 environment:
@@ -11,8 +11,9 @@ dependencies:
   args: ^1.6.0
   #执行shell命令
   process_run: ^0.11.0+2
+
 executables:
-  cpub: cpub
+  cpub:
 
 dev_dependencies:
   pedantic: ^1.9.0
