--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,20 @@
 name: cpub
 description: A sample command-line application.
-version: 0.0.4
+version: 0.0.5
 homepage: https://github.com/chengbook
 
 environment:
-  sdk: '>=2.8.1 <3.0.0'
+  sdk: '>=2.13.0 <3.0.0'
 
 dependencies:
 #  path: ^1.7.0
-  args: ^1.6.0
+  args: ^2.3.0
   #执行shell命令
-  process_run: ^0.11.0+2
+  process_run: ^0.12.3+1
 
 executables:
   cpub:
 
 dev_dependencies:
-  pedantic: ^1.9.0
-  test: ^1.14.4
+#  pedantic: ^1.9.0
+  test: ^1.20.1
